# JamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
glish/: CMakeLists.txt
glish/inc/glish/: stringUtil.h
glish/inc/glish/utils/: log.hpp
glish/src/: Texture.cpp  stringUtil.cpp
glm/detail/: dummy.cpp
inc/2dEngine/: 2dEngine.h  assetsList.h  camera.hpp  entity.hpp  event.hpp  eventManager.hpp  gameState.hpp  keyEventHandler.hpp  log.hpp  scene.hpp  shape.hpp  shapeManager.hpp  sound.hpp  sprite.hpp  spriteSheet.hpp  spriteSheetManager.hpp  stringUtil.h  window.hpp  windowSettings.hpp
inc/2dEngine/collider/: collider.hpp  sphereCollider.hpp  squareCollider.hpp
inc/2dEngine/input/: InputEventHandler.hpp  axisEventHandler.hpp  keyEventHandler.hpp  keyHandler.hpp
inc/2dEngine/progShader/: programManager.hpp
inc/2dEngine/ui/: AbstractUI.hpp
shader/basic/: frag.glsl  fragDebug.glsl  testUIFrag.glsl  testUiVert.glsl  vert.glsl  vertDebug.glsl
src/: camera.cpp  entity.cpp  eventManager.cpp  gameState.cpp  keyEventHandler.cpp  keyHandler.cpp  scene.cpp  shape.cpp  shapeManager.cpp  sound.cpp  sprite.cpp  spriteSheet.cpp  spriteSheetManager.cpp  stringUtil.cpp  window.cpp
src/collider/: collider.cpp  sphereCollider.cpp  squareCollider.cpp
src/input/: InputEventHandler.cpp  axisEventHandler.cpp  keyEventHandler.cpp  keyHandler.cpp
src/progShader/: programManager.cpp
test/: main.cpp
